--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@tsparticles/all": "^3.3.0",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
+    "flowbite": "^2.3.0",
+    "rc-tabs": "^15.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-awesome-reveal": "^4.2.10",
+    "react-dom": "^18.2.0",
+    "react-slideshow-image": "^4.3.1",
+    "react-type-animation": "^3.2.0",
+    "sass": "^1.77.1",
+    "swiper": "^11.1.3",
+    "tsparticles": "^3.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
