--- a/src/components/Projects.json
+++ b/src/components/Projects.json
@@ -3,10 +3,10 @@
         "id": 1,
         "name": "React",
         "picture": [
-            "../../assets/image/React/1.png",
-            "../../assets/image/React/2.png",
-            "../../assets/image/React/3.png",
-            "../../assets/image/React/4.png"
+            "./src/assets/image/React/1.png",
+            "./src/assets/image/React/2.png",
+            "./src/assets/image/React/3.png",
+            "./src/assets/image/React/4.png"
         ],
         "description": "Final Project from Harisenin Bootcamp developed with Git, Figma, HTML, CSS, JavaScript, ReactJS"
     },
@@ -14,8 +14,8 @@
         "id": 2,
         "name": "ReactNative",
         "picture": [
-            "../../assets/image/ReactNative/1.png",
-            "../../assets/image/ReactNative/2.png"
+            "./src/assets/image/ReactNative/1.png",
+            "./src/assets/image/ReactNative/2.png"
         ],
         "description": "Final Project from Mobile Application Course (College) developed with Figma, ReactNative, and Firebase"
     }
