--- a/src/components/Projects.json
+++ b/src/components/Projects.json
@@ -3,10 +3,10 @@
         "id": 1,
         "name": "React",
         "picture": [
-            "/1.png",
-            "/2.png",
-            "/3.png",
-            "/4.png"
+            "React/1.png",
+            "React/2.png",
+            "React/3.png",
+            "React/4.png"
         ],
         "description": "Final Project from Harisenin Bootcamp developed with Git, Figma, HTML, CSS, JavaScript, ReactJS"
     },
@@ -14,8 +14,8 @@
         "id": 2,
         "name": "ReactNative",
         "picture": [
-            "./src/assets/image/ReactNative/1.png",
-            "./src/assets/image/ReactNative/2.png"
+            "ReactNative/1.png",
+            "ReactNative/2.png"
         ],
         "description": "Final Project from Mobile Application Course (College) developed with Figma, ReactNative, and Firebase"
     }
